--- a/AlgorithmPractice/AlgorithmPractice.csproj
+++ b/AlgorithmPractice/AlgorithmPractice.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResumeQuestions\Q504Put10NumbersInto4X4Grid.cs" />
     <Compile Include="ResumeQuestions\Q505FindAllMoneyCombination.cs" />
+    <Compile Include="ResumeQuestions\Q506SimulateQueueWith2Stacks.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
