--- a/AlgorithmPracticeTest/AlgorithmPracticeTest.csproj
+++ b/AlgorithmPracticeTest/AlgorithmPracticeTest.csproj
@@ -87,6 +87,7 @@
     <Compile Include="MicrosoftResumeQuestionsTests\Q504Put10NumbersInto4X4GridTests.cs" />
     <Compile Include="MicrosoftResumeQuestionsTests\Q505FindAllMoneyCombinationTests.cs" />
     <Compile Include="MicrosoftResumeQuestionsTests\Q506SimulateQueueWith2StacksTests.cs" />
+    <Compile Include="MicrosoftResumeQuestionsTests\Q507ConvertStringToIntTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Algorithms\StringMatch\BMMatchTests.cs" />
     <Compile Include="HelpersTests.cs" />
