--- a/AlgorithmPractice/AlgorithmPractice.csproj
+++ b/AlgorithmPractice/AlgorithmPractice.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -9,12 +9,13 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>AlgorithmPractice</RootNamespace>
     <AssemblyName>AlgorithmPractice</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -49,9 +50,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Algorithms\ArrayIntersectHelper.cs" />
+    <Compile Include="Algorithms\BigNumbers\BigNumberHelper.cs" />
     <Compile Include="Algorithms\Fibonacci.cs" />
     <Compile Include="Algorithms\HeapHelper.cs" />
     <Compile Include="Algorithms\TreeRelated\TreeWalk.cs" />
+    <Compile Include="Commons\MathHelper.cs" />
     <Compile Include="Commons\Matrix.cs" />
     <Compile Include="Commons\MultipleTreeNode.cs" />
     <Compile Include="Commons\Vector.cs" />
@@ -102,9 +105,7 @@
   <ItemGroup>
     <Content Include="ResumeQuestions\Questions.txt" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Algorithms\BigNumbers\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
