--- a/AlgorithmPracticeTest/AlgorithmPracticeTest.csproj
+++ b/AlgorithmPracticeTest/AlgorithmPracticeTest.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -8,7 +8,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>AlgorithmPracticeTest</RootNamespace>
     <AssemblyName>AlgorithmPracticeTest</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -20,6 +20,7 @@
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -57,10 +58,13 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Algorithms\BigNumbers\BigNumberHelperTests.cs" />
     <Compile Include="Algorithms\HeapHelperTests.cs" />
+    <Compile Include="Algorithms\Search\BinarySearchTests.cs" />
     <Compile Include="Algorithms\TreeRelated\TreeGenerator.cs" />
     <Compile Include="Algorithms\TreeRelated\TreeWalkTests.cs" />
     <Compile Include="Algorithms\FibonacciTests.cs" />
+    <Compile Include="Algorithms\FindKMinTests.cs" />
     <Compile Include="ClosureTests.cs" />
     <Compile Include="MicrosoftResumeQuestionsTests\Q021FindSumMFromNNumbersTests.cs" />
     <Compile Include="MicrosoftResumeQuestionsTests\Q026LeftShiftStringTests.cs" />
