--- a/AlgorithmPractice/AlgorithmPractice.csproj
+++ b/AlgorithmPractice/AlgorithmPractice.csproj
@@ -80,6 +80,8 @@
     <Compile Include="ResumeQuestions\Q014FindSpecificSumInSortedArray.cs" />
     <Compile Include="ResumeQuestions\Q016PrintBinaryTreeNodeByLevel.cs" />
     <Compile Include="ResumeQuestions\Q028Find1CountInNumber.cs" />
+    <Compile Include="ResumeQuestions\Q053ArrangeAllCharactors.cs" />
+    <Compile Include="ResumeQuestions\Q056LongestCommonSequence.cs" />
     <Compile Include="ResumeQuestions\Q075FindMostCloseBinaryNode.cs" />
     <Compile Include="ResumeQuestions\Q101ReverseEvery2NodesInLinkedList.cs" />
     <Compile Include="Algorithms\Search\BinarySearch.cs" />
