--- a/AlgorithmPracticeTest/AlgorithmPracticeTest.csproj
+++ b/AlgorithmPracticeTest/AlgorithmPracticeTest.csproj
@@ -92,6 +92,8 @@
     <Compile Include="MicrosoftResumeQuestionsTests\Q505FindAllMoneyCombinationTests.cs" />
     <Compile Include="MicrosoftResumeQuestionsTests\Q506SimulateQueueWith2StacksTests.cs" />
     <Compile Include="MicrosoftResumeQuestionsTests\Q507ConvertStringToIntTests.cs" />
+    <Compile Include="MicrosoftResumeQuestionsTests\Q056LongestCommonSequenceTests.cs" />
+    <Compile Include="MicrosoftResumeQuestionsTests\Q053ArrangeAllCharactorsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Algorithms\StringMatch\BMMatchTests.cs" />
     <Compile Include="HelpersTests.cs" />
