Add Q507 Final all available combinations of n pair brackets

--- a/AlgorithmPractice/AlgorithmPractice.csproj
+++ b/AlgorithmPractice/AlgorithmPractice.csproj
@@ -101,6 +101,7 @@
     <Compile Include="ResumeQuestions\Q505FindAllMoneyCombination.cs" />
     <Compile Include="ResumeQuestions\Q506SimulateQueueWith2Stacks.cs" />
     <Compile Include="ResumeQuestions\Q020ConvertStringToInt.cs" />
+    <Compile Include="ResumeQuestions\Q507MatchNBrackets.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
