--- a/AlgorithmPracticeTest/AlgorithmPracticeTest.csproj
+++ b/AlgorithmPracticeTest/AlgorithmPracticeTest.csproj
@@ -95,6 +95,7 @@
     <Compile Include="MicrosoftResumeQuestionsTests\Q056LongestCommonSequenceTests.cs" />
     <Compile Include="MicrosoftResumeQuestionsTests\Q053ArrangeAllCharactorsTests.cs" />
     <Compile Include="MicrosoftResumeQuestionsTests\Q008_2_FindOnlyOneDuplicateInArrayTests.cs" />
+    <Compile Include="MicrosoftResumeQuestionsTests\Q507MatchNBracketsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Algorithms\StringMatch\BMMatchTests.cs" />
     <Compile Include="HelpersTests.cs" />
