--- a/AlgorithmPracticeTest/AlgorithmPracticeTest.csproj
+++ b/AlgorithmPracticeTest/AlgorithmPracticeTest.csproj
@@ -1,111 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7B262E71-C86D-470A-9054-718285488E9B}</ProjectGuid>
+    <TargetFramework>net8.0</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AlgorithmPracticeTest</RootNamespace>
-    <AssemblyName>AlgorithmPracticeTest</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
-    <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
-    <ReferencePath>$(ProgramFiles)\Common Files\microsoft shared\VSTT\$(VisualStudioVersion)\UITestExtensionPackages</ReferencePath>
-    <IsCodedUITest>False</IsCodedUITest>
-    <TestProjectType>UnitTest</TestProjectType>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
-    <TargetFrameworkProfile />
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System" />
-  </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
       <ItemGroup>
         <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
       </ItemGroup>
     </When>
-    <Otherwise>
-      <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
-          <Private>False</Private>
-        </Reference>
-      </ItemGroup>
-    </Otherwise>
+    <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="Algorithms\BigNumbers\BigNumberHelperTests.cs" />
-    <Compile Include="Algorithms\HeapHelperTests.cs" />
-    <Compile Include="Algorithms\Search\BinarySearchTests.cs" />
-    <Compile Include="Algorithms\TreeRelated\TreeGenerator.cs" />
-    <Compile Include="Algorithms\TreeRelated\TreeWalkTests.cs" />
-    <Compile Include="Algorithms\FibonacciTests.cs" />
-    <Compile Include="Algorithms\FindKMinTests.cs" />
-    <Compile Include="ClosureTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q021FindSumMFromNNumbersTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q026LeftShiftStringTests.cs" />
-    <Compile Include="Algorithms\ArrayIntersectHelperTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q001ConvertBSTreeToLinkedListTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q002StackWithMinValueTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q003FindMaxSumValueOfContinuousSubArrayTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q004FindTreePathSumTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q007CheckLinkedListsAreJoinTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q008ReverseLinkedListTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q009CheckPostOrderResultTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q010ReverseSetenceByWordsTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q016PrintBinaryTreeNodeByLevelTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q014FindSpecificSumInSortedArrayTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q075FindMostCloseBinaryNodeTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q101ReverseEvery2NodesInLinkedListTests.cs" />
-    <Compile Include="Algorithms\Sort\QuickSortTests.cs" />
-    <Compile Include="Algorithms\Sort\MergeSortTests.cs" />
-    <Compile Include="Algorithms\Sort\BubbleSortTests.cs" />
-    <Compile Include="Algorithms\StringMatch\KMPTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q502FindLeafEmployeesTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q501FindClosestBiggerValueInTreeTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q503FindSmallestPositiveMissingIntegerTests - Copy.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q504Put10NumbersInto4X4GridTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q505FindAllMoneyCombinationTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q506SimulateQueueWith2StacksTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q020ConvertStringToIntTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q056LongestCommonSequenceTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q053ArrangeAllCharactersTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q008_2_FindOnlyOneDuplicateInArrayTests.cs" />
-    <Compile Include="MicrosoftResumeQuestionsTests\Q507MatchNBracketsTests.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Algorithms\StringMatch\BMMatchTests.cs" />
-    <Compile Include="HelpersTests.cs" />
-    <Compile Include="CsvParserTests.cs" />
+    <ProjectReference Include="..\AlgorithmPractice\AlgorithmPractice.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AlgorithmPractice\AlgorithmPractice.csproj">
-      <Project>{8f05fb25-250c-45a1-a2a6-e996e81aad2f}</Project>
-      <Name>AlgorithmPractice</Name>
-    </ProjectReference>
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="MSTest" Version="3.8.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="MicrosoftResumeQuestionsTests\Q053PrintAllPermutationTests.cs" />
+    <Compile Remove="MicrosoftResumeQuestionsTests\Q061FindNumberOnlyOccurOnceTests.cs" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
@@ -125,13 +45,4 @@
       </ItemGroup>
     </When>
   </Choose>
-  <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
